After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686320 - Crashes when enabling visualiser plugin
Crashes when enabling visualiser plugin
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: Plugins (other)
0.13.x
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-17 17:05 UTC by Bastien Nocera
Modified: 2012-11-15 22:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: Call XInitThreads() on X11 systems (1.94 KB, patch)
2012-10-17 17:06 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-10-17 17:05:21 UTC
git master

Crashes in:
  • #0 pthread_mutex_lock
    from /lib64/libpthread.so.0
  • #1 XrmQGetResource
    from /lib64/libX11.so.6
  • #2 XGetDefault
    from /lib64/libX11.so.6
  • #3 get_boolean_default
    at cairo-xlib-screen.c line 98
  • #4 _cairo_xlib_init_screen_font_options
    at cairo-xlib-screen.c line 146
  • #5 _cairo_xlib_screen_get_font_options
    at cairo-xlib-screen.c line 455
  • #6 _cairo_xlib_surface_get_font_options
    at cairo-xlib-surface.c line 1325
  • #7 *INT_cairo_surface_get_font_options
    at cairo-surface.c line 1362
  • #8 INT_cairo_surface_get_font_options
    at cairo-surface.c line 1345
  • #9 _cairo_gstate_ensure_scaled_font
    at cairo-gstate.c line 1830
  • #10 _cairo_gstate_ensure_scaled_font
    at cairo-gstate.c line 1817
  • #11 _cairo_gstate_show_text_glyphs
    at cairo-gstate.c line 1922
  • #12 cairo_show_glyphs
    at cairo.c line 3315
  • #13 pango_cairo_renderer_show_text_glyphs
    at pangocairo-render.c line 367
  • #14 pango_cairo_renderer_draw_glyphs
    at pangocairo-render.c line 383
  • #15 pango_renderer_draw_glyphs
    at pango-renderer.c line 641
  • #16 pango_renderer_draw_glyph_item
    at pango-renderer.c line 705
  • #17 pango_renderer_draw_layout_line
    at pango-renderer.c line 570
  • #18 pango_renderer_draw_layout
    at pango-renderer.c line 194
  • #19 _pango_cairo_do_layout
    at pangocairo-render.c line 877
  • #20 pango_cairo_show_layout
    at pangocairo-render.c line 1005
  • #21 gtk_theming_engine_render_layout
    at gtkthemingengine.c line 2056
  • #22 gtk_render_layout
    at gtkstylecontext.c line 3958
  • #23 gtk_label_draw
    at gtklabel.c line 4054
  • #24 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #25 gtk_widget_draw_marshallerv
    at gtkwidget.c line 851
  • #26 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #27 _g_closure_invoke_va
    at gclosure.c line 840
  • #28 g_signal_emit_valist
    at gsignal.c line 3211
  • #29 g_signal_emit
    at gsignal.c line 3356
  • #30 _gtk_widget_draw_internal
    at gtkwidget.c line 5745
  • #31 gtk_container_propagate_draw
    at gtkcontainer.c line 3394
  • #32 gtk_container_draw_child
    at gtkcontainer.c line 3241
  • #33 gtk_box_forall
    at gtkbox.c line 1875
  • #34 gtk_container_forall
    at gtkcontainer.c line 2066
  • #35 gtk_container_draw
    at gtkcontainer.c line 3258
  • #36 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #37 gtk_widget_draw_marshallerv
    at gtkwidget.c line 851
  • #38 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #39 _g_closure_invoke_va
    at gclosure.c line 840
  • #40 g_signal_emit_valist
    at gsignal.c line 3211
  • #41 g_signal_emit
    at gsignal.c line 3356
  • #42 _gtk_widget_draw_internal
    at gtkwidget.c line 5745
  • #43 gtk_container_propagate_draw
    at gtkcontainer.c line 3394
  • #44 gtk_container_draw_child
    at gtkcontainer.c line 3241
  • #45 gtk_bin_forall
    at gtkbin.c line 170
  • #46 gtk_container_forall
    at gtkcontainer.c line 2066
  • #47 gtk_container_draw
    at gtkcontainer.c line 3258
  • #48 gtk_button_draw
    at gtkbutton.c line 1766
  • #49 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #50 gtk_widget_draw_marshallerv
    at gtkwidget.c line 851
  • #51 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #52 _g_closure_invoke_va
    at gclosure.c line 840
  • #53 g_signal_emit_valist
    at gsignal.c line 3211
  • #54 g_signal_emit
    at gsignal.c line 3356
  • #55 _gtk_widget_draw_internal
    at gtkwidget.c line 5745
  • #56 gtk_container_propagate_draw
    at gtkcontainer.c line 3394
  • #57 gtk_container_draw_child
    at gtkcontainer.c line 3241
  • #58 gtk_bin_forall
    at gtkbin.c line 170
  • #59 gtk_container_forall
    at gtkcontainer.c line 2066
  • #60 gtk_container_draw
    at gtkcontainer.c line 3258
  • #61 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #62 gtk_widget_draw_marshallerv
    at gtkwidget.c line 851
  • #63 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #64 _g_closure_invoke_va
    at gclosure.c line 840
  • #65 g_signal_emit_valist
    at gsignal.c line 3211
  • #66 g_signal_emit
    at gsignal.c line 3356
  • #67 _gtk_widget_draw_internal
    at gtkwidget.c line 5745
  • #68 gtk_container_propagate_draw
    at gtkcontainer.c line 3394
  • #69 toolbar_content_draw
    at gtktoolbar.c line 3369
  • #70 gtk_toolbar_draw
    at gtktoolbar.c line 892
  • #71 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #72 gtk_widget_draw_marshallerv
    at gtkwidget.c line 851
  • #73 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #74 _g_closure_invoke_va
    at gclosure.c line 840
  • #75 g_signal_emit_valist
    at gsignal.c line 3211
  • #76 g_signal_emit
    at gsignal.c line 3356
  • #77 _gtk_widget_draw_internal
    at gtkwidget.c line 5745
  • #78 gtk_container_propagate_draw
    at gtkcontainer.c line 3394
  • #79 gtk_container_draw_child
    at gtkcontainer.c line 3241
  • #80 gtk_box_forall
    at gtkbox.c line 1865
  • #81 gtk_container_forall
    at gtkcontainer.c line 2066
  • #82 gtk_container_draw
    at gtkcontainer.c line 3258
  • #83 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #84 gtk_widget_draw_marshallerv
    at gtkwidget.c line 851
  • #85 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #86 _g_closure_invoke_va
    at gclosure.c line 840
  • #87 g_signal_emit_valist
    at gsignal.c line 3211
  • #88 g_signal_emit
    at gsignal.c line 3356
  • #89 _gtk_widget_draw_internal
    at gtkwidget.c line 5745
  • #90 gtk_container_propagate_draw
    at gtkcontainer.c line 3394
  • #91 gtk_container_draw_child
    at gtkcontainer.c line 3241
  • #92 gtk_bin_forall
    at gtkbin.c line 170
  • #93 gtk_container_forall
    at gtkcontainer.c line 2066
  • #94 gtk_container_draw
    at gtkcontainer.c line 3258
  • #95 gtk_window_draw
    at gtkwindow.c line 7688
  • #96 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #97 gtk_widget_draw_marshallerv
    at gtkwidget.c line 851
  • #98 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #99 _g_closure_invoke_va
    at gclosure.c line 840
  • #100 g_signal_emit_valist
    at gsignal.c line 3211
  • #101 g_signal_emit
    at gsignal.c line 3356
  • #102 _gtk_widget_draw_internal
    at gtkwidget.c line 5745
  • #103 gtk_widget_send_expose
    at gtkwidget.c line 6125
  • #104 gtk_main_do_event
    at gtkmain.c line 1626
  • #105 _gdk_event_emit
    at gdkevents.c line 69
  • #106 _gdk_window_process_updates_recurse
    at gdkwindow.c line 3880
  • #107 gdk_x11_window_process_updates_recurse
    at gdkwindow-x11.c line 4850
  • #108 gdk_window_process_updates_internal
    at gdkwindow.c line 4066
  • #109 gdk_window_process_updates
    at gdkwindow.c line 4262
  • #110 gtk_window_move_resize
    at gtkwindow.c line 7269
  • #111 gtk_window_check_resize
    at gtkwindow.c line 6313
  • #112 g_cclosure_marshal_VOID__VOIDv
    at gmarshal.c line 115
  • #113 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #114 _g_closure_invoke_va
    at gclosure.c line 840
  • #115 g_signal_emit_valist
    at gsignal.c line 3211
  • #116 g_signal_emit
    at gsignal.c line 3356
  • #117 gtk_container_check_resize
    at gtkcontainer.c line 1823
  • #118 gtk_container_idle_sizer
    at gtkcontainer.c line 1686
  • #119 gdk_threads_dispatch
    at gdk.c line 788
  • #120 g_idle_dispatch
    at gmain.c line 4806
  • #121 g_main_dispatch
    at gmain.c line 2715
  • #122 g_main_context_dispatch
    at gmain.c line 3219
  • #123 g_main_context_iterate
    at gmain.c line 3290
  • #124 g_main_context_iteration
    at gmain.c line 3351
  • #125 g_application_run
    at gapplication.c line 1620
  • #126 main
    at main.c line 98

Comment 1 Bastien Nocera 2012-10-17 17:06:13 UTC
Created attachment 226662 [details] [review]
shell: Call XInitThreads() on X11 systems

Otherwise bad things can happen with some plugins that expect
mutexes to work, like the visualiser plugin and Clutter.
Comment 2 Jonathan Matthew 2012-10-17 21:37:39 UTC
Review of attachment 226662 [details] [review]:

yes.
Comment 3 Bastien Nocera 2012-11-15 22:44:03 UTC
Attachment 226662 [details] pushed as 6ccbc44 - shell: Call XInitThreads() on X11 systems