shell: Call XInitThreads() on X11 systems

Otherwise bad things can happen with some plugins that expect
mutexes to work, like the visualiser plugin and Clutter.

https://bugzilla.gnome.org/show_bug.cgi?id=686320